#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999949 released.

        * Fixed editing so that files open even with
          syntax errors.


2012-12-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999948 released.

        * More firefox mozrepl install code in Makefile.PL.


2012-12-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999947 released.

        * Fixed missing space in cp cmd.


2012-12-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999946 released.

        * Fixed false positive error when chmod.

        * Fixed cp lookup.


2012-12-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999945 released.

        * Permissions 770 for Berkeley DB with Cygwin/Windows. 

        * Added code to install Firefox and MozRepl if Cygwin.


2012-12-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999944 released.

        * Fixed Concurrent Locking for Unix and Cygwin/Windows.

        * Successfully tested full install in Solaris.


2012-12-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999943 released.

        * Permissions 660 for Berkeley DB with Cygwin/Windows.


2012-12-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999942 released.

        * Permissions 777 for Berkeley DB with Cygwin/Windows.

        * Added Regex to strip socket noise.


2012-12-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999941 released.

        * More MozRepl enhancements.

