@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 bf5f1248280745c3d6734c0f8a95a938a5a96f59 ChangeLog
+SHA1 f52189a1fae1b0bc49518cd454e5242947391383 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2b6b8f9fc192662e60281ea9353bfafae92e2774 MANIFEST
-SHA1 04a6aa5ab923d0b9ee3134b8d6498d047ea3fc03 META.yml
-SHA1 c3bc4572fafd85ad8c0ab86a4da4ba8f817c3f64 MYMETA.json
-SHA1 146a8d77e7e3aa2e603b8280a4330ca83a712732 MYMETA.yml
-SHA1 4e30474292c3dfe518dbce4347b144c723157169 Makefile.PL
+SHA1 cafed14127ca5a4c4ed3e1f7eb0c2c0421454530 META.yml
+SHA1 07748d0010f007c4fb71c1fc898db2915894f108 MYMETA.json
+SHA1 5cb950f351482771e6a45ed161fc9c1bc7d59d56 MYMETA.yml
+SHA1 48c9324df557f5f3821e180820e269d0d42c3dea Makefile.PL
 SHA1 fd6c642523f44765fc64b3515231a3ad62f90d73 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 4fe10515de60ffa439d09fbb4eadf7dc1cfd275f bin/fullauto.pl
@@ -37,7 +37,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 fc5901da34096965280c51ce28f5b8b4312cc4e1 lib/Net/FullAuto.pm
+SHA1 84d6e9bac2c923a62119b8ffe70ef18d212e0691 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 7cacb9a2873a4baac0d084529eed8cb78a301248 lib/Net/FullAuto/Distro/fa_code.pm
@@ -54,7 +54,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlDXcqAACgkQJM3IZYB6aOof2wCgn0c058A1mJNdUGz5DVRes5rh
-x3kAoIH6SR4eUpoLXZwspJACAOCsC4vt
-=J/aF
+iEYEARECAAYFAlDZPSYACgkQJM3IZYB6aOpTpQCfQYgZ5nx3FyoM8pNSTrtrlF8C
+ZO4An0w+pzDXee9iRTqQdUraav/6Nl87
+=xaQy
 -----END PGP SIGNATURE-----
