@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999949';
+our $VERSION='0.999950';
 
 
 use 5.005;
