@@ -19,6 +19,15 @@
 ################################################################
 
 
+2012-12-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.999950 released.
+
+        * Term::Menus out of sync.
+
+        * Fixed Permissioning Setup with Cygwin.
+
+
 2012-12-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.999949 released.
